--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "deepseek-siliconcloud",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@8.15.4",
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=8"
+  },
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf .next node_modules"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^3.7.4",
     "@clerk/nextjs": "^6.11.1",
-    "@prisma/client": "^6.3.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -25,10 +29,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.474.0",
-    "mongodb": "^6.13.0",
-    "mongoose": "^8.10.0",
     "next": "15.1.6",
-    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -36,10 +37,10 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.0.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
