--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,3 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": {
-    "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/no-unused-vars": "warn",
-    "no-console": "off"
-  }
+  "extends": "next/core-web-vitals"
 } 
